<resources>
    <string name="app_name">Assisgment Android 2</string>
    <string name="home_nav_view">Home</string>
    <string name="search_nav_view">Search</string>
    <string name="exams_nav_view">Exams</string>
    <string name="wishlist_nav_item">Wishlist</string>
    <string name="account_nav_view">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="react_js">React Js</string>
    <string name="question_vote">8/10</string>
    <string name="question">question</string>
    <string name="minutes">35min</string>
    <string name="remaining">remaining</string>
    <string name="continue_test">Continue Test</string>
    <string name="mock">Mock</string>
    <string name="university">University</string>
    <string name="all">All</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="score">Score</string>
    <string name="score_int">8/10</string>
    <string name="june_4th_2023">June 4th, 2023</string>
    <string name="minutes_course">%dmin</string>
    <string name="aws_certification">Aws Certification</string>
    <string name="rating_detail">%.1f</string>
    <string name="questions_text_detail">%1$d Questions</string>
    <string name="questions_subtext_detail">10 point for a correct answer</string>
    <string name="time_text_detail">%1$d hour %2$d min</string>
    <string name="time_subtext_detail">Total duration of the quiz</string>
    <string name="note_text_detail">Please read the text below carefully so you can understand it</string>
    <string name="description_text_detail">10 point awarded for a correct answer and no marks for a incorrect answer. \nTap on options to select the correct answer. \nTap on the bookmark icon to save interesting questions.\nClick submit if you are sure you want to complete all the questions\n</string>
    <string name="submit_text_detail">Start Test</string>
    <string name="start_subtext_detail">Answer all questions correctly</string>
    <string name="start_title_detail">Win 10 star</string>
    <string name="revisit">Revisit</string>
</resources>