<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <TextView
        android:id="@+id/tv_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/university"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_title2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/mock"
        android:textColor="@color/purple"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/rb_home1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title1">

        <RadioButton
            android:id="@+id/rb_home1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:text="@string/all"
            android:textAlignment="center"
            android:textColor="@drawable/radio_text_selector" />

        <RadioButton
            android:id="@+id/rb_home2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:text="@string/in_progress"
            android:textAlignment="center"
            android:textColor="@drawable/radio_text_selector" />

        <RadioButton
            android:id="@+id/rb_home3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:text="@string/completed"
            android:textAlignment="center"
            android:textColor="@drawable/radio_text_selector" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home"
        android:layout_width="409dp"
        android:layout_height="500dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_home"
        app:layout_constraintVertical_bias="0.01999998" />

</androidx.constraintlayout.widget.ConstraintLayout>